make logout and refactor errors into auth
